--- a/src/main/resources/View/reportPane.fxml
+++ b/src/main/resources/View/reportPane.fxml
@@ -78,7 +78,7 @@
                               <Insets bottom="8.0" left="80.0" right="40.0" top="12.0" />
                            </HBox.margin>
                            <children>
-                              <Label alignment="TOP_LEFT" layoutX="14.0" layoutY="6.0" prefHeight="81.0" prefWidth="205.0" text="Tổng doanh thu tháng" textFill="WHITE" wrapText="true">
+                              <Label alignment="TOP_LEFT" layoutX="14.0" layoutY="6.0" prefHeight="81.0" prefWidth="205.0" text="Tổng doanh thu tháng (VND)" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
@@ -95,7 +95,7 @@
                               <Insets bottom="8.0" left="20.0" right="40.0" top="12.0" />
                            </HBox.margin>
                            <children>
-                              <Label alignment="TOP_LEFT" layoutX="13.0" layoutY="6.0" prefHeight="81.0" prefWidth="215.0" text="Tổng tiền đã thu" textFill="WHITE" wrapText="true">
+                              <Label alignment="TOP_LEFT" layoutX="13.0" layoutY="6.0" prefHeight="81.0" prefWidth="215.0" text="Tổng tiền đã thu (VND)" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
@@ -112,7 +112,7 @@
                               <Insets bottom="8.0" left="20.0" top="12.0" />
                            </HBox.margin>
                            <children>
-                              <Label alignment="TOP_LEFT" layoutX="13.0" layoutY="6.0" prefHeight="81.0" prefWidth="227.0" text="Tổng tiền chưa thu" textFill="WHITE" wrapText="true">
+                              <Label alignment="TOP_LEFT" layoutX="13.0" layoutY="6.0" prefHeight="81.0" prefWidth="227.0" text="Tổng tiền chưa thu (VND)" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
